--- a/habilidades.html
+++ b/habilidades.html
@@ -36,11 +36,11 @@
             <li class="fs-5">Organização</li>
             <li class="fs-5">Trabalho em equipe</li>
             <li class="fs-5">Responsabilidade</li>
-            <li class="fs-5">HTML5 - Básico</li>
-            <li class="fs-5">CSS3 - Básico</li>
-            <li class="fs-5">JavaScript - Básico</li>
-            <li class="fs-5">Python - Básico</li>
-            <li class="fs-5">C# - Básico</li>
+            <li class="fs-5">HTML5 - Aprendendo</li>
+            <li class="fs-5">CSS3 - Aprendendo</li>
+            <li class="fs-5">JavaScript - Aprendendo</li>
+            <li class="fs-5">Python - Aprendendo</li>
+            <li class="fs-5">C# - Aprendendo</li>
           </ul>
 
           <h3><strong>Idiomas</strong></h3>
